@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmJPEGFragmentsInfo.h,v $
   Language:  C++
-  Date:      $Date: 2005/01/26 16:28:58 $
-  Version:   $Revision: 1.14 $
+  Date:      $Date: 2005/01/28 15:42:22 $
+  Version:   $Revision: 1.15 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -50,6 +50,9 @@ public:
    void DecompressJPEGFramesFromFile(std::ifstream *fp, uint8_t *buffer, int nBits, int numBytes, int length);
 
    void AddFragment(JPEGFragment *fragment);
+   JPEGFragment *GetFirstFragment();
+   JPEGFragment *GetNextFragment();
+   unsigned int GetFragmentCount();
 
 private:
    typedef std::list<JPEGFragment *> JPEGFragmentsList;
@@ -59,8 +62,7 @@ private:
    void *SampBuffer;
    char* pimage;
    JPEGFragmentsList Fragments;
-
-   friend class PixelReadConvert;
+   JPEGFragmentsList::iterator ItFragments;
 };
 } // end namespace gdcm
 
